--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,9 +6,7 @@ services:
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: postgres
-    volumes:
-      - ./data/db:/var/lib/postgresql/data
+      POSTGRES_DB: onlineshop 
     ports:
       - "5432:5432"
     healthcheck:
